chore: fresh look and feel, new functionalities, etc
