# family-hearth-api/src/main/java/com/familyhearth/user/UserController.java
@@ -1,15 +1,14 @@
 package com.familyhearth.user;
 
 import com.familyhearth.families.model.Family;
+import com.familyhearth.user.dto.UpdateUserRequest;
 import com.familyhearth.user.dto.UserDto;
 import com.familyhearth.user.model.User;
 import com.familyhearth.user.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/users")
@@ -26,6 +25,13 @@ public class UserController {
     public ResponseEntity<UserDto> getMe() {
         User currentUser = userService.getCurrentUser();
         return ResponseEntity.ok(userMapper.toDto(currentUser));
+    }
+
+    @PatchMapping("/me")
+    @PreAuthorize("isAuthenticated()")
+    public ResponseEntity<UserDto> updateUser(@RequestBody UpdateUserRequest request) {
+        User updatedUser = userService.updateUser(request);
+        return ResponseEntity.ok(userMapper.toDto(updatedUser));
     }
 
     @GetMapping("/me/family")
