# family-hearth-api/src/main/java/com/familyhearth/user/dto/UpdateUserRequest.java
@@ -1,0 +1,8 @@
+package com.familyhearth.user.dto;
+
+import lombok.Data;
+
+@Data
+public class UpdateUserRequest {
+    private Long avatarFileId;
+}
