# family-hearth-api/src/main/java/com/familyhearth/user/dto/UserDto.java
@@ -8,4 +8,5 @@ public class UserDto {
     private String firstName;
     private String lastName;
     private String email;
+    private String avatarUrl;
 }
